# esp32-p4-cam

./: CMakeLists.txt  sdkconfig.defaults
main/: CMakeLists.txt  esp32-p4-cam.c  idf_component.yml
